fix white background when search too big

--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ body {
     height: 100%;
     width: 100%;
     background-image: url("../img/Bibliothèque.jpg");
-    background-repeat: no-repeat;
+    background-repeat: repeat-y ;
     background-size: 100% 100vh;
     font-family: sans-serif;
 }
